--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     }
     *{
       text-align: center;
-      background-color: rgb(247, 177, 188);
+      background-color: blue(247, 177, 188);
     }
     .one{
       font-size: 50px;
